--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,12 +9,6 @@ h1,h2,h3,h4,h5,p,ul,ol,li,body {
   margin: 0;
   padding: 0;
 }
-.b-bottom {border-bottom: 1px solid #000;}
-.b-top {border-top: 1px solid #000;}
-.b-right {border-right: 1px solid #000;}
-.b-left {border-left: 1px solid #000;}
-.cntr {text-align: center;}
-.p-cell {background: #fff;}
 
 #accordian-wrapper {
   overflow: hidden;
@@ -129,6 +123,7 @@ h1,h2,h3,h4,h5,p,ul,ol,li,body {
   .hole-num-container {
     height: $tab-height;
     background: #b5b5b5;
+    border-bottom: 1px solid #d4fe2c;
     .hole-num {
       line-height: $tab-height;
       font-size: 29px;
@@ -139,7 +134,6 @@ h1,h2,h3,h4,h5,p,ul,ol,li,body {
   height: 30px;
   text-align: center;
   color: #fff;
-  border: 1px solid #000;
   background: #717171;
     .descLeft {
       height: inherit;
@@ -168,7 +162,7 @@ h1,h2,h3,h4,h5,p,ul,ol,li,body {
   height: 100px;
   width: 100%;
   margin: 0 auto;
-  border: 1px solid #000;
+  background: #f5f5f5;
     .player-name {
     height: inherit;
     float: left;
@@ -181,7 +175,6 @@ h1,h2,h3,h4,h5,p,ul,ol,li,body {
     .player-cell {
       display: table-cell;
       vertical-align: middle;
-      background: #b5b5b5;
       color: $player-color;
     }
   }
@@ -200,7 +193,7 @@ h1,h2,h3,h4,h5,p,ul,ol,li,body {
     }
   }
   .controls {
-    float: left;
+    float: right;
     height: inherit;
     border: 1px solid #000;
     overflow: hidden;
@@ -210,6 +203,7 @@ h1,h2,h3,h4,h5,p,ul,ol,li,body {
     }
   }
 }
+.player .player-controls .b-left-2 {border-left: 2px solid #000;}
 .score {width: 25%;}
 .gir {width: 25%;}
 .fwh {width: 25%;}
@@ -222,7 +216,7 @@ h1,h2,h3,h4,h5,p,ul,ol,li,body {
 .checkbox {
   display: table;
   text-align: center;
-  color: #fff;
+  color: #f5f5f5;
   font-size: 1.6em;
   .fa-check {
     display: table-cell;
